feat: working db connection

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   date_picker_timeline: ^1.2.6
   time_range: ^1.1.1
+  supabase_flutter: ^2.8.4
+  supabase_auth_ui: ^0.5.5
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
